--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
     </style>
+    <script
+      src="https://kit.fontawesome.com/e0dc62ea01.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React Weather App</title>
   </head>
   <body>
