--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
     </style>
     <script
       src="https://kit.fontawesome.com/e0dc62ea01.js"
